crates/keron-lang/tests/corpus/errors/check/string_in_arithmetic.keron
val a = "hello" + 1
